# gnfetch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD-bin  README.md
assets/backgrounds/: LICENSE.txt
assets/logos/: LICENSE.txt
docs/: README.md  config.example.toml  configuration.md
packaging/: PKGBUILD  README.md  build-release.sh  gnfetch.desktop
scripts/: export-public.sh  gen_ascii.py  gen_backgrounds.py  gen_svg.py
src/: cli.rs  config.rs  demo.rs  main.rs  model.rs
src/collectors/: cpu.rs  de_wm.rs  disk.rs  gpu.rs  host.rs  kernel.rs  memory.rs  mod.rs  os.rs  packages.rs  shell.rs  uptime.rs
src/render/: ansi.rs  ascii_logos.rs  background.rs  bg_images.rs  caps.rs  card.rs  content.rs  draw.rs  fonts.rs  format.rs  graphical.rs  layout.rs  layout_columns.rs  layout_compact.rs  layout_neofetch.rs  layout_strip.rs  logo.rs  mod.rs  svg_logos.rs  termsize.rs  theme.rs
wiki/: Building-from-Source.md  Configuration.md  FAQ.md  Home.md  Installation.md  Themes-Layouts-and-Backgrounds.md
